static/css/style.scss
/* ... */
input[type="file"]:focus,
input[type="radio"]:focus,
input[type="checkbox"]:focus {
	outline: thin solid $primary-color;
	outline: 1px auto $primary-color;
}

button, input[type=submit], .button {
	@include input-margin;
	@include button($primary-color, $primary-complement);
}

button::-moz-focus-inner {
	padding: 0;
	border: 0
}

.button-group {
	overflow: hidden;
	padding-left: 1px;
	button, input[type=submit], .button {
		display: block;
		float: left;
		margin-left: -1px;
	}
}

#header {
	button, input[type=submit], .button {
		font-size: 14px;
		padding: ($base-margin-reduced / 2) $base-margin-reduced;
		height: 35px;
		margin-bottom: 0;
	}

	a {
		color: white;
	}

	.navigation {
		float: right;
	}

	.toggle-menu {
		float: left;
		font-size: 22px;
		line-height: 22px;
		padding: 9px 0;
		width: 40px;
		height: 22px;
		margin-left: -$base-margin / 2;
		@media #{$large-up} {
			margin-left: 0;
		}
		&:before {
			content: " ";
			display: block;
			border: none;
			margin-left: auto;
			margin-right: auto;
			box-shadow: 0px 3px 0px 2px #FFF, 0px 10px 0px 2px #FFF, 0px 17px 0px 2px #FFF;
			width: 1px;
		}
		&:hover {
			text-decoration: none;
		}
	}

	.button-group .button {
		margin-top: $base-margin-reduced / 4;
		line-height: 21px;
	}

	.button.left, .button.right {
		width: 35px;
		padding-left: 0;
		padding-right: 0;
		&:before {
			content: " ";
			display: block;
			width: 0;
			height: 0;
			border-style: solid;
			vertical-align: middle;
			margin: 5px auto;
		}
	}

	.button.right:before {
		border-width: 6px 0 6px 12px;
		border-color: transparent transparent transparent #ffffff;
	}

	.button.left:before {
		border-width: 6px 12px 6px 0;
		border-color: transparent #ffffff transparent transparent;
	}

	.button.menu {
		float: left;
		margin-right: $base-margin-reduced / 2;
		&:before {
			border: none;
			box-shadow: 0px -7px 0px 2px #FFF, 0px 0px 0px 2px #FFF, 0px 7px 0px 2px #FFF;
			width: 16px;
		}
	}
}

select {
	height: 2.25em;
	border: 1px solid $input-border-color;
	background-color: $background-color;
	color: $text-color;
}

select[multiple] {
	height: auto;
}


label {
	display: block;
	margin: 0;
	color: mix($text-color, $background-color, 80%);
}

.errors {
	@include base-padding;
	@include base-margin-cancel-horizontal;
	@include input-margin;
	list-style: none;
	border-top: 1px solid #ffd9d9;
	border-bottom: 1px solid #ffd9d9;
	color: maroon;
	background: #ffe6e6;
}

.errors:first-child {
	@include base-margin-cancel-top;
}

.submit-row, .pagination {
	@include base-padding;
	padding-bottom: $base-margin - $input-spacing;
	overflow: hidden;
	background: mix($background-color, $text-color, 98%);
	border-top: 1px solid mix($background-color, $text-color, 90%);
	box-shadow: inset 0px 4px 3px -3px rgba(0, 0, 0, 0.02);
}

.pagination {
	.previous {
		float: left;
	}

	.next {
		float: right;
	}
}

.submit-row {
	@include base-margin-cancel-bottom;
	.positive {
		float: right;
	}

	.negative {
		float: left;
	}
}

.fullclickable-link {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

.entries {
	list-style: none;
	padding: 0;
	margin: 0;

	li {
		@include base-padding-horizontal;
		@include base-padding-vertical;
		border-top: 1px solid $light-border-color;
		position: relative;
		overflow: hidden;
		&:first-child {
			border-top: none;
		}
		.title {
			@include text-ellipsis;
			display: block;
			font-weight: bold;
			text-decoration: none;
			color: mix($text-color, $background-color, 80%);
		}
		.feed {
			float: right;
			font-size: 14px;
			padding-left: $base-margin;
			color: mix($text-color, $background-color, 50%);
		}
		.summary {
			font-size: 14px;
			line-height: 18px;
			height: 36px;
			overflow: hidden;
			color: mix($text-color, $background-color, 60%);
			margin-top: $base-margin-reduced;
		}
		&:hover {
			background: $active-color;
			.title {
				color: $primary-complement;
			}
			.feed, .summary {
				color: mix($primary-complement, $primary-color, 75%);
			}
		}
	}
}

.entry {
	.info {
		background: $background-color;
		color: $primary-color;
		padding-bottom: $base-margin;
		border-bottom: 1px solid $light-border-color;

		.extra-info {
			color: mix($text-color, $background-color);
			font-size: 13px;
			@include base-padding-horizontal;
			.feed {
				float: right;
			}
		}

		h1 {
			@include base-padding;
			margin: 0 0 ($base-margin / 2) 0;
			padding-bottom: 0;
		}
	}

	.summary {
		@include base-padding;
	}
}

body.login {
	#content {
		@include base-margin;
		margin-top: -$base-margin;
	}
	@media #{$large-up} {
		#content {
			max-width: 400px;
			margin-left: auto;
			margin-right: auto;
			margin-top: $base-margin * 2;
		}

		#header {
			padding: ($base-margin-reduced / 2) $base-margin-reduced;
		}
	}
}

